<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/HomeText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="75dp"
        android:fontFamily="@font/kanit"
        android:text="@string/home1"
        android:textColor="@color/black"
        android:textSize="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/HomeText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/kanit"
        android:text="@string/home2"
        android:textColor="@color/gris"
        android:textStyle="bold"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/HomeText1"
        />

    <ImageView
        android:id="@+id/img_test"
        android:layout_width="429dp"
        android:layout_height="255dp"
        android:src="@drawable/bukit"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:layout_width="429dp"
        android:layout_height="255dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/human"
        android:layout_width="154dp"
        android:layout_height="265dp"
        android:src="@drawable/human"
        app:layout_constraintTop_toBottomOf="@id/HomeText2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="110dp"
        android:foregroundGravity="center"
        tools:layout_editor_absoluteX="128dp"
        tools:layout_editor_absoluteY="315dp" />

    <ImageView
        android:id="@+id/tree1"
        android:layout_width="46dp"
        android:layout_height="89dp"
        android:layout_marginStart="65dp"
        android:layout_marginBottom="216dp"
        android:src="@drawable/tree"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/human" />


    <ImageView
        android:id="@+id/tree2"
        android:layout_width="58dp"
        android:layout_height="144dp"
        android:layout_marginStart="-5dp"
        android:layout_marginBottom="216dp"
        android:src="@drawable/tree"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/human" />

    <ImageView
        android:id="@+id/tree3"
        android:layout_width="39dp"
        android:layout_height="124dp"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="180dp"
        android:src="@drawable/tree"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_home"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:fontFamily="@font/kanit"
        android:text="@string/home3"
        android:textSize="16dp"
        android:layout_marginLeft="75dp"
        android:backgroundTint="@color/bleu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/human"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home4"
        app:layout_constraintTop_toBottomOf="@+id/btn_home"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="50dp"
        android:textStyle="bold"
        />

</androidx.constraintlayout.widget.ConstraintLayout>