<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/LoginText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="270dp"
        android:fontFamily="@font/kanit"
        android:text="@string/login1"
        android:textColor="@color/black"
        android:textSize="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/LoginText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/kanit"
        android:text="@string/login2"
        android:textColor="@color/noir500"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/LoginText1"
        />

    <TextView
        android:id="@+id/LoginText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/kanit"
        android:text="Email"
        android:textColor="@color/gris"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/LoginText2"
        />

    <EditText
        android:id="@+id/et_Email"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/rectangle_2"
        android:fontFamily="@font/kanit"
        android:textSize="20dp"
        android:hint="Entrer votre email"
        android:layout_marginTop="20dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/LoginText3"
        app:layout_constraintStart_toStartOf="@+id/LoginText3"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/LoginText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/kanit"
        android:text="Mot de passe"
        android:textColor="@color/gris"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_Email"
        />


    <EditText
        app:endIconMode="password_toggle"
        android:id="@+id/et_Password"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/rectangle_2"
        android:fontFamily="@font/kanit"
        android:textSize="20dp"
        android:gravity="center"
        android:hint="Entrer votre mot de passe"
        android:layout_marginTop="20dp"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/LoginText4"
        app:layout_constraintStart_toStartOf="@+id/LoginText4"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:fontFamily="@font/kanit"
        android:text="@string/login3"
        android:textSize="16dp"
        android:background="@drawable/bbb"
        app:layout_constraintStart_toStartOf="@id/et_Password"
        app:layout_constraintTop_toBottomOf="@+id/et_Password"
        />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        app:layout_constraintBottom_toTopOf="@+id/LoginText1"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/rrectangle1" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="68dp"
        app:layout_constraintBottom_toTopOf="@+id/et_Password"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/rrectangle2" />
</androidx.constraintlayout.widget.ConstraintLayout>